--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
 
 <body>
 <div>
-    <h1>Example Domain</h1>
-    <p>This domain is for use in illustrative examples in documents. You may use this
-    domain in literature without prior coordination or asking for permission.</p>
-    <p><a href="https://www.iana.org/domains/example">More information...</a></p>
+    <h1>good job</h1>
+    <p>you have managed to click this link, well done.</p>
 </div>
 </body>
 </html>
